# Squalr

./: Cargo.toml  README.md
.github/workflows/: build-windows.yml
slint-mvvm/: Cargo.toml
slint-mvvm-macros/: Cargo.toml
slint-mvvm-macros/src/: lib.rs
slint-mvvm/src/: convert_from_view_data.rs  convert_to_view_data.rs  lib.rs  view_binding.rs  view_collection_binding.rs
slint-mvvm/src/converters/: shared_string_converter.rs
squalr-android/: Cargo.toml
squalr-android/src/: lib.rs
squalr-cli/src/: main.rs
squalr-cli/src/response_handlers/: mod.rs
squalr-cli/src/response_handlers/project/: mod.rs
squalr-cli/src/response_handlers/project_items/: mod.rs
squalr-cli/src/response_handlers/scan/: mod.rs
squalr-cli/src/response_handlers/scan_results/: mod.rs
squalr-cli/src/response_handlers/settings/: handler_settings_list_response.rs  handler_settings_set_response.rs  mod.rs
squalr-cli/src/response_handlers/trackable_tasks/: mod.rs
squalr-engine-api/src/registries/freeze_list/: freeze_list_registry.rs
squalr-engine-api/src/registries/symbols/: symbol_registry.rs
squalr-engine-api/src/structures/data_values/: anonymous_value.rs  data_value.rs
squalr-engine-projects/src/project/: project.rs  project_manager.rs
squalr-engine-scanning/src/pointer_scans/: pointer_scan_executor_task.rs
squalr-engine-scanning/src/scanners/: element_scan_dispatcher.rs
squalr-gui/: Cargo.toml
squalr-gui/src/models/: docking.rs
squalr-installer/: Cargo.toml
squalr-tui/src/: main.rs
squalr/src/: app.rs
squalr/src/views/settings/: settings_tab_scan_view.rs  (+1 more)
(+31 files in other folders)
