[workspace]
members = [
    "squalr-engine",
    "squalr-engine-architecture",
    "squalr-engine-debuggers",
    "squalr-engine-memory",
    "squalr-engine-processes",
    "squalr-engine-projects",
    "squalr-engine-scanning",
    "squalr-engine-scripting",
    "squalr-android",
    "squalr-cli",
    "squalr-tui",
    "squalr-installer",
    "squalr",
    "squalr-gui",
    "slint-mvvm",
    "slint-mvvm-macros",
]
resolver = "3"

[profile.release]

[profile.release-with-debug]
inherits = "release"
debug = true
